--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,16 @@
   color: white;
 }
 
+button {
+  background-color: #6772e5;
+  color: #fff;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+  padding: 7px 14px;
+}
+button:hover {
+  background-color: #5469d4;
+}
+
 .App-link {
   color: #61dafb;
 }
@@ -36,3 +46,47 @@
     transform: rotate(360deg);
   }
 }
+
+
+form {
+  margin: 1em;
+
+}
+
+h4 {
+  font-size: 2em;
+  font-weight: bolder;
+  color: red;
+}
+
+h3 {
+  color: black;
+
+}
+
+.MuiFormControl-fullWidth{
+  margin: 1em;
+}
+
+  .paper {
+    margin-top: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
+  .avatar {
+    margin: 2em;
+    background-color:rgb(23, 163, 223);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
+  .form {
+    width: '100%'; 
+    margin-top: 2em;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
+
+  .submit {
+    margin: spacing(3, 0, 2),
+  }
+
