--- a/src/Header.css
+++ b/src/Header.css
@@ -1,10 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
 
+
+@media only screen and (max-width: 400px) {
+  body {
+    background-color: #f44336;
+  }
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+  }
+  
+  li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change the link color on hover */
+  li a:hover {
+    background-color: #111;
+  }
+
+  
+}
 
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
+    background-color: #f44336;
   }
   
   li {
@@ -17,9 +46,13 @@ ul {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-family: 'Abril Fatface';
   }
   
   /* Change the link color to #111 (black) on hover */
   li a:hover {
     background-color: #111;
+   
   }
+
+
