--- a/src/Calendar.css
+++ b/src/Calendar.css
@@ -1,8 +1,8 @@
-.react-calendar {
+.DatePicker {
     width: 350px;
     max-width: 100%;
-    background: wheat;
-    border: 1px solid #a0a096;
+    background: #d1c4e9;
+    border: 1px solid green;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.500em;
   }
